--- a/discogs-api/requirements.txt
+++ b/discogs-api/requirements.txt
@@ -5,6 +5,7 @@ Django==6.0.2
 django-cors-headers==4.9.0
 django-environ==0.12.0
 djangorestframework==3.16.1
+djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
 idna==3.11
 oauthlib==3.3.1
