--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: python
     plan: free # Change to 'starter' or higher for production
     buildCommand: pip install -r discogs-api/requirements.txt && cd discogs-api && python manage.py collectstatic --noinput
-    startCommand: cd discogs-api && gunicorn config.wsgi:application --bind 0.0.0.0:$PORT
+    startCommand: cd discogs-api && python manage.py migrate --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
